kubernetes-dashboard/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.daystram.com`)
      middlewares:
        - name: vpn-whitelist
          namespace: ingress-traefik
      services:
        - name: kubernetes-dashboard
          passHostHeader: true
          port: 443
          serversTransport: kubernetes-dashboard
  tls:
    secretName: cert-kubernetes-dashboard
